# c-utils

./: .gitignore  CMakeLists.txt  README.md  data_structures_and_algorithms.cbp  data_structures_and_algorithms.depend  data_structures_and_algorithms.layout  dynamic_array.c  dynamic_array.h  linked_list.c  linked_list.h  main.c  run.sh
.cache/clangd/index/: algorithms.c.5DE4AD89B91C4EB1.idx  algorithms.c.C5C615E2EE977ABB.idx  algorithms.h.32B2A2FB0A37D2F1.idx  algorithms.h.ACA5B8F9DB4C9074.idx  data_types.c.226FA17EA63D742E.idx  data_types.c.C922CA26AC6B7ABB.idx  data_types.h.5572B87F6DA31FEB.idx  data_types.h.F07DAC43DB3A2E13.idx  file_io.c.181C2DFAE054B1E3.idx  file_io.c.8E9AC5FFA2635689.idx  file_io.h.2C90769103426D72.idx  file_io.h.D4421215DA731433.idx  main.c.1BCC7335FA0EE242.idx  main.c.5A419833707DCD0D.idx  string_utils.c.167B8DD18EC714C0.idx  string_utils.c.7332F91DAC276A53.idx  string_utils.h.054C052BC1E269EC.idx  string_utils.h.64597EE202E64809.idx  vector.h.5CB61ABEE61BF03C.idx  vector.h.E9CEBD03FD933673.idx
include/: algorithms.h  data_types.h  dynamic_array.h  file_io.h  file_reader.h  hashmap.h  linked_list.h  string_utils.h  vector.h
scripts/: build.sh
src/: algorithms.c  data_types.c  dynamic_array.c  file_io.c  file_reader.c  hashmap.c  linked_list.c  main.c  string_utils.c  vector.c
test/: main.c  vector.h
